# BurlowForYou_lr20

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
src/logic/: Coder.cpp  Coder.h  Developer.h  Group.cpp  Group.h  Manager.h  Worker.h  fwd.h
src/logic/src/: Developer.cpp  Manager.cpp  Worker.cpp
src/model/: WorkerList.h  fwd.h
src/model/src/: WorkerList.cpp
src/widget/: AddDialog.h  MainWindow.h  fwd.h
src/widget/src/: AddDialog.cpp  MainWindow.cpp
src/widget/ui/: AddDialog.ui  MainWindow.ui
